LOG New version 4.11.1

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "lokalize-4.11.0.tar.xz": b0e606806db9188c95e49d139ba58d417232d3a3
+  lokalize-4.11.1.tar.xz: 0af9576c292bade1202d051afb52c01dd5e0ddb9
