--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
-sources:
+removed_sources:
   lokalize-15.08.0.tar.xz: 1444d9a86248da6612626ed665bfe3ac1d2c3725
+sources:
+  lokalize-15.08.1.tar.xz: a11b540febcf47065ab47416db720168b7a33289
