--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
-sources:
+removed_sources:
   lokalize-17.12.1.tar.xz: 976beaf610844c383841b863b594547eb546611b
+sources:
+  lokalize-17.12.2.tar.xz: 9dfcb7c55e871778d5299ea4f262d286db860e41
