--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   lokalize-17.12.1.tar.xz: 976beaf610844c383841b863b594547eb546611b
-sources:
   lokalize-17.12.2.tar.xz: 9dfcb7c55e871778d5299ea4f262d286db860e41
+sources:
+  lokalize-17.12.3.tar.xz: dfc8b7a7198006b9587533e3897685b1da399e6f
